# teorientabot

./: .replit  main.py  pyproject.toml
te-orienta-bot/: keep_alive.py  main.py  pyproject.toml
