[tool.poetry]
name = "te_orienta_bot"        
version = "0.1.0"
description = "Discord bot for ENEM tutoring"
authors = ["Your Name <you@example.com>"]
packages = []
include = ["*.py"]

[tool.poetry.dependencies]
python = "^3.10.16"
flask = "^3.0.0"
discord-py = "^2.3.2"
openai = "^1.30.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"